--- a/event-finder-web-app/public/index.html
+++ b/event-finder-web-app/public/index.html
@@ -10,9 +10,11 @@
       content="Web site created using create-react-app"
     />
 
-    <!-- CSS only -->
+    <!-- Boostrap CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css">
+
     <title>Event Finder</title>
   </head>
   <body>
